--- a/Ecom.API/appsettings.json
+++ b/Ecom.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EcomDB": "Data Source=LAPTOP-JMGMI5SB\\DEV;Initial Catalog=EcomDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+  }
 }
