implement redis on basket controller

--- a/Ecom.API/appsettings.json
+++ b/Ecom.API/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EcomDB": "Data Source=LAPTOP-JMGMI5SB\\DEV;Initial Catalog=EcomDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True"
+    "EcomDB": "Data Source=LAPTOP-JMGMI5SB\\DEV;Initial Catalog=EcomDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True",
+    "redis": "localhost"
   }
 }
