--- a/Ecom.Infrastracture/Ecom.Infrastracture.csproj
+++ b/Ecom.Infrastracture/Ecom.Infrastracture.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="9.0.5" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.37" />
   </ItemGroup>
 
   <ItemGroup>
