finish reset password conflict

--- a/Ecom.API/appsettings.json
+++ b/Ecom.API/appsettings.json
@@ -5,9 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "EcomDB": "Data Source=LAPTOP-JMGMI5SB\\DEV;Initial Catalog=EcomDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True",
-    "redis": "localhost"
-  }
+  "AllowedHosts": "*"
+ 
 }
