make order phase

--- a/Ecom.API/appsettings.json
+++ b/Ecom.API/appsettings.json
@@ -5,6 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
- 
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EcomDB": "Data Source=LAPTOP-JMGMI5SB\\DEV;Initial Catalog=EcomDB;Integrated Security=True;Encrypt=True;Trust Server Certificate=True",
+    "redis": "localhost"
+  },
+  "EmailSetting": {
+    "Port": 465,
+    "From": "kameladel1117@gmail.com",
+    "UserName": "kameladel1117@gmail.com",
+    "Password": "illgmqnxeosiwtty",
+    "Smtp": "smtp.gmail.com"
+  },
+  "Token": {
+    "Secret": "My name is Mahmoud Ahmed from ITI",
+    "Issure": "https://localhost:44306/"
+  }
 }
